# barclassifier

./: .gitignore  CMakeLists.txt  README.md  Source.cpp  barclassifier.pro  detection.h  main.cpp
include/: barclasses.h  hole.h
source/: barcodeCreator.cpp  component.cpp
